--- a/index.html
+++ b/index.html
@@ -18,19 +18,14 @@
         <form>
             <div class="amount">
                 <p>Enter amount</p>
-                <input value="100" type="text">
+                <input value="1" type="text">
             </div>
             <div class="dropdown">
                 <div class="from">
                     <p>From</p>
                     <div class="select-container">
                     <img src="https://flagsapi.com/US/flat/64.png">
-                    <select name="from">
-                        <option value="USD" selected>USD</option>
-                        <option value="INR">INR</option>
-                        <option value="EURO">EUR</option>
-                        <option value="AUD">AUD</option>
-                    </select>
+                    <select name="from"></select>
                 </div>
                 </div>
                 <i class="fa-solid fa-right-left"></i>
@@ -38,16 +33,11 @@
                     <p>To</p>
                     <div class="select-container">
                     <img src="https://flagsapi.com/IN/flat/64.png">
-                    <select name="to">
-                        <option value="INR" selected>INR</option>
-                        <option value="USD">USD</option>
-                        <option value="EURO">EUR</option>
-                        <option value="AUD">AUD</option>
-                    </select>
+                    <select name="to"></select>
                     </div>
                 </div>
             </div>
-            <div class="msg">1USD = 80INR</div>
+            <div class="msg"></div>
             <button>Get Exchange Rate</button>
         </form>
     </div>
